Added to performance monitoring section

--- a/src/docs-page.html
+++ b/src/docs-page.html
@@ -1452,6 +1452,10 @@ canvas.style.height = desiredheight + "px";
 
 
 
+						<p id="performance-monitoring"><h4>Performance Monitoring</h4></p>
+
+
+
 
 						<p>For checking the performance on a given device, you can use the static <code>checkPerformance</code> method without actually instantiating it on a screen.</p>
 
@@ -1476,39 +1480,21 @@ canvas.style.height = desiredheight + "px";
 							 </code>
 						 </pre>
 
-						<p>You can also measure the live fps on any given stream by adding the <code>analyticsEnabled</code> flag as <code>true</code> in the configuration parameters.
-
-
-
-
+						<p>You can also measure the live fps on any given stream using the <code>filter.processer.metrics.fps</code> propery as shown below:
 
 						<pre>
 							 <code>
-  const config = {
-	   token: '...',
-	   background: 'blur',
-	   analyticsEnabled: true
-   };
 
-   const filter = BackgroundFilter(video, config);
+   const filter = new BackgroundFilter(video, config);
+
+   console.log(`The current fps is ${filter.processor.metrics.fps}`);
 							 </code>
 						 </pre>
 
 						</p>
 
 
-						<div class="callout-block callout-block-info">
-
-							<div class="content">
-								<h4 class="callout-title">
-	                                <span class="callout-icon-holder mr-1">
-		                                <svg class="svg-inline--fa fa-info-circle fa-w-16" aria-hidden="true" focusable="false" data-prefix="fas" data-icon="info-circle" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" data-fa-i2svg=""><path fill="currentColor" d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 110c23.196 0 42 18.804 42 42s-18.804 42-42 42-42-18.804-42-42 18.804-42 42-42zm56 254c0 6.627-5.373 12-12 12h-88c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h12v-64h-12c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h64c6.627 0 12 5.373 12 12v100h12c6.627 0 12 5.373 12 12v24z"></path></svg><!-- <i class="fas fa-info-circle"></i> Font Awesome fontawesome.com -->
-		                            </span><!--//icon-holder-->
-									Note
-								</h4>
-								<p>		Setting analyticsEnabled to true will also load <a href="https://github.com/segmentio/analytics.js/" >analytics.js</a>, which itself loads a version of Sentry.js, and sends anonymous performance data back to our servers. </p>
-							</div><!--//content-->
-						</div>
+						<p>You can see a working code example in our <a href="https://github.com/Vectorly/ai-filters-examples/blob/main/background/virtual-background/src/demo.js#L165">Background Demo code</a>, the same code used for our <a href="https://files.vectorly.io/demo/background-filter/index.html">public demo</a> </p>
 
 
 						<h4  id="item-background-performance-considerations">Performance Considerations</h4>
