Added medium links

--- a/src/index.html
+++ b/src/index.html
@@ -61,6 +61,7 @@
 						<li class="list-inline-item"><a href="https://github.com/Vectorly"><i class="fab fa-github fa-fw"></i></a></li>
 			            <li class="list-inline-item"><a href="https://www.linkedin.com/company/vectorly"><i class="fab fa-linkedin fa-fw"></i></a></li>
 		                <li class="list-inline-item"><a href="https://angel.co/vectorly"><i class="fab fa-angellist fa-fw"></i></a></li>
+						<li class="list-inline-item"><a href="https://medium.com/vectorly"><i class="fab fa-medium fa-fw"></i></a></li>
 		            </ul><!--//social-list-->
 		            <a href="https://ai-filters.vectorly.io/#/signup" class="btn btn-primary d-none d-lg-flex">Sign up</a>
 
@@ -190,6 +191,7 @@
 			    <li class="list-inline-item"><a href="https://github.com/Vectorly"><i class="fab fa-github fa-fw"></i></a></li>
 	            <li class="list-inline-item"><a href="https://www.linkedin.com/company/vectorly"><i class="fab fa-linkedin fa-fw"></i></a></li>
 	            <li class="list-inline-item"><a href="https://angel.co/vectorly"><i class="fab fa-angellist fa-fw"></i></a></li>
+				<li class="list-inline-item"><a href="https://medium.com/vectorly"><i class="fab fa-medium fa-fw"></i></a></li>
 	        </ul><!--//social-list-->
 
 	        <!--/* This template is free as long as you keep the footer attribution link. If you'd like to use the template without the attribution link, you can buy the commercial license via our website: themes.3rdwavemedia.com Thank you for your support. :) */-->
