--- a/src/docs-page.html
+++ b/src/docs-page.html
@@ -68,6 +68,7 @@
 						<li class="list-inline-item"><a href="https://github.com/Vectorly"><i class="fab fa-github fa-fw"></i></a></li>
 			            <li class="list-inline-item"><a href="https://www.linkedin.com/company/vectorly"><i class="fab fa-linkedin fa-fw"></i></a></li>
 		                <li class="list-inline-item"><a href="https://angel.co/vectorly"><i class="fab fa-angellist fa-fw"></i></a></li>
+						<li class="list-inline-item"><a href="https://medium.com/vectorly"><i class="fab fa-medium fa-fw"></i></a></li>
 		            </ul><!--//social-list-->
 		            <a href="https://ai-filters.vectorly.io/#/signup" class="btn btn-primary d-none d-lg-flex">Sign up</a>
 					<a href="mailto:team@vectorly.io" class="btn btn-outline-primary d-none d-lg-flex" style="margin-left: 20px;">Contact</a>
@@ -1783,6 +1784,7 @@ canvas.style.height = desiredheight + "px";
 							<li class="list-inline-item"><a href="https://github.com/Vectorly"><i class="fab fa-github fa-fw"></i></a></li>
 							<li class="list-inline-item"><a href="https://www.linkedin.com/company/vectorly"><i class="fab fa-linkedin fa-fw"></i></a></li>
 							<li class="list-inline-item"><a href="https://angel.co/vectorly"><i class="fab fa-angellist fa-fw"></i></a></li>
+							<li class="list-inline-item"><a href="https://medium.com/vectorly"><i class="fab fa-medium fa-fw"></i></a></li>
 				        </ul><!--//social-list-->
 				    </div>
 			    </footer>
